2004-12-18  Werner Koch  <wk@g10code.com>

	* Makefile.am (noinst_PROGRAMS): Don't generate them when cross
	compiling.
	(EXTRA_DIST): Include asn1-parse.c asn1-tables.c.
	(DISTCLEAN): Removed. 

2004-12-15  Werner Koch  <wk@g10code.com>

	* ksba.m4: Use proper quoting for use with automake 1.9.

2004-11-29  Werner Koch  <wk@g10code.com>

	* cms.c (read_and_hash_cont): Added more code for the unusual
	non-NDEF things and factored common code out to ..
	(read_hash_block): .. new function.

2004-11-26  Werner Koch  <wk@g10code.com>

	* util.c (_ksba_stpcpy): Renamed from stpcpy to avoid duble
	defines sympols in case libska gets statically linked.
	* util.h (stpcpy): Redefine it.

2004-08-17  Werner Koch  <wk@g10code.de>

	* cert.c (ksba_cert_get_image): Replaced assert by proper error
	message.

	* ber-decoder.c (match_der): Fix for primitive implicit context
	tags.  Argh, this whole decoder mess needs a full rewrite.
	
2004-08-16  Werner Koch  <wk@g10code.de>

	* keyinfo.c: Fixed second DSA entry; a comma was missing.

2004-07-20  Werner Koch  <wk@gnupg.org>

	* cert.c (_ksba_cert_get_issuer_dn_ptr): Renamed to ..
	(_ksba_cert_get_subject_dn_ptr): .. this.  And return the
	subject's DN.
	* ocsp.c (issuer_name_hash): Use it here.  Thanks to Bernhard
	Herzog for pointing this out.  It revealed itself only in a
	multi-level certificate chain.

2004-06-08  Werner Koch  <wk@gnupg.org>

	* certreq.c (ksba_certreq_add_extension): Removed unused variable.

2004-06-06  Werner Koch  <wk@gnupg.org>

	* ksba.h: Comment cleanups.

	* certreq.c (ksba_certreq_add_extension): New.

2004-04-28  Werner Koch  <wk@gnupg.org>

	* libksba.vers: Add new functions.

	* crl.h (crl_extn_s, crl_extn_t): New.
	(ksba_crl_s): Add member EXTENSION_LIST;
	* crl.c (ksba_crl_release): Free an extension list.
	(parse_one_extension, store_one_extension): New.
	(parse_crl_extensions): Store extensions.
	(ksba_crl_get_extension, ksba_crl_get_auth_key_id)
	(ksba_crl_get_crl_number): New.
