@@ -1,9 +1,14 @@
+2005-01-21  Werner Koch  <wk@g10code.com>
+
+	* Makefile.am (ber_dump_SOURCES): Use per target flags to force
+	object renaming.
+
 2004-12-18  Werner Koch  <wk@g10code.com>
 
 	* Makefile.am (noinst_PROGRAMS): Don't generate them when cross
 	compiling.
 	(EXTRA_DIST): Include asn1-parse.c asn1-tables.c.
-	(DISTCLEAN): Removed. 
+	(DISTCLEAN): Removed.
 
 2004-12-15  Werner Koch  <wk@g10code.com>
 
